client/master.css
* {
	box-sizing: border-box;
}

body {
	font: 1em/1.5 "Helvetica Neue", sans-serif;
	color: #333;
	-webkit-font-smoothing: antialiased;
}

h1 {
	font-weight: 300;
	margin: 0 0 0.5em;
	font-size: 2em;
}

h2 {
	font-size: 1.1em;
	margin: 0 0 .5em;
}

mark {
	color: #333;
	background: none;
}

.muted {
	color: #aaa;
}

.map {
	float: left;
	background: transparent url("/map.png") no-repeat;
	width: 730px;
	height: 700px;
	position: relative;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
}

.details {
	float: left;
	padding: 1em 1%;
	width: 40%;
	text-align: center;
}

.party-details {
	text-align: left;
	width: 50%;
	margin: 2em auto;
}

.party-details th {
	font-weight: bold;
	border-right: 1px solid #ddd;
}

.party-details td,
.party-details th {
	padding: 5px 10px;
}

.party-details tr:first-child * {
	border-bottom: 1px solid #ddd;
}

.map circle {
	fill: red;
	cursor: pointer;
}

.map text {
    text-anchor: middle;
    fill: white;
    font-weight: bold;
    cursor: pointer;
}

.map circle.callout {
    stroke-width: 5px;
    stroke-dasharray: 9, 5;
    stroke-opacity: .8;
    fill: none;
    stroke: red;
}

/*
	Create popup
 */

.create-popup {
	position: absolute;
	background-color: #fff;
	padding: 1%;
	border-radius: 3px;
	box-shadow: rgba(0, 0, 0, 0.4) 0 10px 20px;
	width: 200px;
}

label {
	font-weight: bold;
	font-size: .9em;
}

.create-popup label {
	display: block;
}

.create-popup footer {
	margin-top: .5em;
}

.create-popup .save {
	float: right;
	font-size: .9em;
	background-color: #129DC7;
	box-shadow: #1A738F 0 3px 0;
}

.create-popup .close {
	display: inline-block;
	color: #fff;
	font-weight: bold;
	background-color: #000;
	border: 2px solid #fff;
	border-radius: 100%;
	padding: 0 4px 2px;
	line-height: 1;
	text-align: center;
	position: absolute;
	right: -10px;
	top: -10px;
	box-shadow: rgba(0,0,0, 0.5) 0 1px 2px;
	cursor: pointer;
}

.create-popup input[type="text"],
.create-popup textarea {
	width: 100%;
}

/* The arrow  */

.create-popup:after {
	display: block;
	position: absolute;
	bottom: -15px;
	left: 40%;
	content: "";
	height: 0;
	width: 0;
	border-left: 15px solid transparent;
	border-right: 15px solid transparent;
	border-top: 15px solid #fff;
}

/* Attendees */

.attendees {
	border: solid #eee;
	border-width: 1px 0;
	margin: 1em 0;
	padding: 1em 0;
	text-align: center;
}

.attendees .attendees-count {
	font-weight: 300;
	font-size: 1.5em;
	color: #777;
}

#rsvp-yes {
	margin: 1em 0;
}

/* Helpers */

.msg {
	font-size: .9em;
}

.negative {
	color: #C91818;
}

/* Forms */

.btn,
button,
input[type="button"],
input[type="submit"] {
	-webkit-appearance: none;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	position: relative;
	
	background-color: #77B828;
	color: #fff;
	font-weight: bold;
	text-align: center;
	font-family: "Helvetica Neue", sans-serif;
	font-size: 1.5em;

	padding: 3px .5em;
	border-radius: 3px;
	cursor: pointer;
	border: 0;

	box-shadow: #629623 0 5px 0;
}

.btn:active,
button:active,
input[type="button"]:active,
input[type="submit"]:active {
	top: 3px;
	box-shadow: #629623 0 2px 0;
}

